--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.1.8",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
