--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API_ENDPOINT = http://54.153.169.150/api
+# NEXT_PUBLIC_API_ENDPOINT = http://13.236.87.192/api
+NEXT_PUBLIC_API_ENDPOINT = http://localhost:1412/api
 NEXT_PUBLIC_URL = https://koine.id.vn
