--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_ENDPOINT = https://koinebackend.site/api
 # NEXT_PUBLIC_API_ENDPOINT = http://localhost:1412/api
-# NEXT_PUBLIC_URL = https://koine.id.vn
-NEXT_PUBLIC_URL = http://localhost:3000
+NEXT_PUBLIC_URL = https://koine.id.vn
+# NEXT_PUBLIC_URL = http://localhost:3000
