--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -45,6 +46,7 @@
     "embla-carousel-auto-scroll": "^8.2.1",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.5.4",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -60,7 +62,7 @@
     "react-responsive-masonry": "^2.3.0",
     "sharp": "^0.33.4",
     "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.1.8",
     "usehooks-ts": "^3.1.0",
