--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.6.0",
     "@next/bundle-analyzer": "^14.2.7",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -46,13 +48,14 @@
     "embla-carousel-auto-scroll": "^8.2.1",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^11.5.4",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.399.0",
-    "next": "14.2.4",
+    "next": "^14.2.13",
     "next-intl": "^3.19.0",
     "next-themes": "^0.3.0",
     "react": "^18",
