--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
     "@tiptap-pro/extension-file-handler": "^2.11.2",
+    "@tiptap/extension-hard-break": "^2.8.0",
     "@tiptap/extension-highlight": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-text-align": "^2.6.6",
@@ -49,7 +50,7 @@
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
     "emoji-mart": "^5.6.0",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.9.0",
     "html-to-text": "^9.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
