--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
     "@tiptap-pro/extension-file-handler": "^2.11.2",
+    "@tiptap/extension-bubble-menu": "^2.8.0",
     "@tiptap/extension-hard-break": "^2.8.0",
     "@tiptap/extension-highlight": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
