--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/starter-kit": "^2.6.6",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "artplayer": "^5.1.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
