--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NEXT_PUBLIC_API_ENDPOINT = http://localhost:9090/api
 # NEXT_PUBLIC_API_ENDPOINT = http://localhost:1412/api
 NEXT_PUBLIC_URL = https://koine.id.vn
 # NEXT_PUBLIC_URL = http://localhost:3000
+NEXT_PUBLIC_GOOGLE_URL_LOCAL=http://localhost:9090/api/auth/google
+NEXT_PUBLIC_GOOGLE_URL=https://koinebackend.site/api/auth/google
