--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.9.0",
     "html-to-text": "^9.0.5",
+    "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.21.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
