--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.399.0",
     "next": "15.2.1",
+    "nextjs-toploader": "^3.7.15",
     "react": "19.0.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "19.0.0",
