--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
+    "@types/react-datepicker": "^6.2.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "artplayer": "^5.1.7",
@@ -69,7 +70,7 @@
     "next": "15.2.1",
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0",
-    "react-day-picker": "^9.5.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.52.0",
     "react-responsive-masonry": "^2.3.0",
