--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "@tanstack/react-table": "^8.21.2",
     "@tiptap-pro/extension-file-handler": "^2.11.2",
     "@tiptap/extension-bubble-menu": "^2.8.0",
+    "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-hard-break": "^2.8.0",
     "@tiptap/extension-highlight": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-placeholder": "^2.11.5",
     "@tiptap/extension-text-align": "^2.6.6",
+    "@tiptap/extension-text-style": "^2.11.5",
     "@tiptap/extension-underline": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
