--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ NEXT_PUBLIC_API_ENDPOINT = http://localhost:8080/api
 # NEXT_PUBLIC_API_ENDPOINT = http://localhost:1412/api
 # NEXT_PUBLIC_URL = https://koine.id.vn
 NEXT_PUBLIC_URL = http://localhost:3000
-NEXT_PUBLIC_GOOGLE_URL_LOCAL=http://localhost:8080/api/auth/google
-NEXT_PUBLIC_GOOGLE_URL=https://koinebackend.site/api/auth/google
+NEXT_PUBLIC_GOOGLE_URL=http://localhost:8080/api/auth/google/login
+NEXT_PUBLIC_GOOGLE_URL_LOCAL=https://koinebackend.site/api/auth/google/login
 NEXT_PUBLIC_SOCKET_ENDPOINT = http://localhost:8080
